--- a/contactez-nous.html
+++ b/contactez-nous.html
@@ -12,7 +12,7 @@ ref: contact
     <div class="col-md-5">
         <h3 class="title-md text-theme text-uppercase hr-left primary-color">Formulaire de contact</h3>
         <div class="form-bg text-theme">
-            <form method="POST" action="https://formspree.io/{{site.email}}">
+            <form method="POST" action="https://formspree.io/f/xyylnedv">
                 <div class="form-group">
                     <label class="control-label required" for="name">Nom</label>
                     <input required class="form-control" type="text" name="name" id="name" />
