Update homepage content

--- a/accueil.html
+++ b/accueil.html
@@ -136,16 +136,15 @@ ref: home
                 <div class="icon-sm-side right service">
                     <i class="fa fa-round fa-3x fa-code"></i>
                     <h3 class="title"><span>Développement</span></h3>
-                    <p>Vous êtes en recherche de compétences techniques pointues ou de renforts ponctuels sur un projet. Nous intégrons votre équipe de développeurs existante ou prenons le lead technique sur votre projet.</p>
-                    <p>Vous fournissez le design, les wireframes et êtes en charge de la gestion de projet, Khawa Technology s'occupe de toute ce qui concerne les développements : analyse, architecture serveur, planning, développement et déploiement.</p>
+                    <p>Vous êtes en recherche de compétences techniques pointues ou de renfort sur un projet. Nous intégrons votre équipe de développeurs existante ou prenons le lead technique sur votre projet.</p>
+                    <p>Khawa Technology s'occupe de toute ce qui concerne les développements : analyse, architecture serveur, planning, développement et déploiement.</p>
                 </div>
             </div>
             <div class="col-md-5">
                 <div class="icon-sm-side left service">
                     <i class="fa fa-round fa-3x fa-phone"></i>
                     <h3 class="title"><span>Maintenance et support</span></h3>
-                    <p>vous avez un problème technique ou des évolutions mineures à réaliser sur un projet et n'avez pas les ressources pour vous en occuper, Khawa Technology sous-traite vos opérations de maintenance, quelque soit la complexité du projet.</p>
-                    <p>Khawa Technology propose des plans de maintenance à la carte.</p>
+                    <p>Vous avez un problème technique ou des évolutions mineures à réaliser sur un projet et n'avez pas les ressources pour vous en occuper, Khawa Technology sous-traite vos opérations de maintenance, quelque soit la complexité du projet.</p>
                 </div>
             </div>
         </div>
@@ -200,7 +199,7 @@ ref: home
                         <li>Rspec / capybara</li>
                         <li>React / Redux / webpack</li>
                         <li>Cypress / Mocha / Jest</li>
-                        <li>GatsbyJS</li>
+                        <li>Next.js</li>
                         <li>Jekyll</li>
                         <li>Projets legacy</li>
                     </ul>
@@ -422,7 +421,7 @@ ref: home
                 <div class="lead-section lead text-theme">
                     <p>Antoine et François sont deux amis de longue date partis vivre en Asie suite à l'obtention de leur diplôme. Basés principalement à Pékin, ils ont travaillé dans l'industrie du web pendant plus de dix années.</p>
                     <p>Ayant évolués dans un environnement multiculturel, en startup, agence web et en tant qu'indépendants, ils ont acquis une expérience solide dans la livraison de projets de tailles variées et le leadership technique.</p>
-                    <p>Khawa Karpo est le nom de la montagne où Antoine et François ont pris la décision de joindre leurs efforts pour créer la société de développement web Khawa Technology.</p>
+                    <p>Khawa Karpo est le nom de la montagne où Antoine et François ont pris la décision de s'associer pour créer la société de développement web Khawa Technology.</p>
                 </div>
             </div>
         </div>
