--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ ref: home
                     <i class="fa fa-round fa-3x fa-code"></i>
                     <h3 class="title"><span>Development</span></h3>
                     <p>You are looking for sharp technical skills or one-off support on a web project. We integrate with your existing development team or work autonomously on your project.</p>
-                    <p>You provide the design, wireframes and handle project management, Khawa Technology takes care of everything development related: analysis, server architecture, planning, development and deployment.</p>
+                    <p>Khawa Technology takes care of everything development related: analysis, server architecture, planning, development and deployment.</p>
                 </div>
             </div>
             <div class="col-md-5">
@@ -145,7 +145,6 @@ ref: home
                     <i class="fa fa-round fa-3x fa-phone"></i>
                     <h3 class="title"><span>Maintenance and support</span></h3>
                     <p>You have issues to fix or minor evolutions to bring on a project and don't have the resources to handle that work, we process your maintenance operations whatever the complexity of the project.</p>
-                    <p>Khawa Technology offers a la carte monthly maintenance plans.</p>
                 </div>
             </div>
         </div>
@@ -200,7 +199,7 @@ ref: home
                         <li>Rspec / capybara</li>
                         <li>React / Redux / webpack</li>
                         <li>Cypress / Mocha / Jest</li>
-                        <li>GatsbyJS</li>
+                        <li>Next.js</li>
                         <li>Jekyll</li>
                         <li>Legacy projects</li>
                     </ul>
@@ -425,7 +424,7 @@ ref: home
                 <div class="lead-section lead text-theme">
                     <p>Antoine and François are two long time friends who lived in Asia for a while after graduating in France. Primarily based in Beijing, they have been working in the web industry for more than eight years.</p>
                     <p>Working in a multicultural environment in startups, web agencies or as independant contractors, they have gained a lot of experience in technical leadership and in shipping web projects of any size.</p>
-                    <p>Khawa Karpo is the name of the mountain where Antoine and François decided to join their efforts and found Khawa Technology.</p>
+                    <p>Khawa Karpo is the name of the mountain where Antoine and François decided to partner and set up Khawa Technology.</p>
                 </div>
             </div>
         </div>
