Add Babasport testimonial

--- a/accueil.html
+++ b/accueil.html
@@ -301,6 +301,17 @@ ref: home
                     <div id="carousel-22" class="carousel slide" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="active item">
+                                <img src="{{ 'images/testimonials/testimonials-AP.jpg' | absolute_url }}"
+                                     alt="Antoine Petit" typeof="foaf:Image" class="img-circle center-block" />
+                                <h3 class="title-xs text-theme mt-16">Antoine Petit</h3>
+                                <p class="lead text-theme">
+                                    <i class="fa fa-quote-left"></i>
+                                    Super travail de Khawa, très réactifs, arrangeants et toujours à la recherche de solutions pragmatiques.
+                                    Au top, respect des délais, autonomie, responsabilité. Bref à recommander !
+                                    <i class="fa fa-quote-right"></i>
+                                </p>
+                            </div>
+                            <div class="item">
                                 <img src="{{ 'images/testimonials/testimonials-GE.jpg' | absolute_url }}"
                                      alt="Guillaume Ebelmann" typeof="foaf:Image" class="img-circle center-block" />
                                 <h3 class="title-xs text-theme mt-16">Guillaume Ebelmann</h3>
@@ -367,6 +378,10 @@ ref: home
             <div class="col-sm-5 col-sm-offset-1">
                 <p class="lead text-theme text-center">Ils nous font confiance :</p>
                 <div id="owl-clients" class="owl-carousel owl-theme mt-20">
+                    <div>
+                        <img src="{{ 'images/clients/logo_babasport.png' | absolute_url }}"
+                             alt="Babasport logo" title="Babasport" typeof="foaf:Image" class="img-responsive" />
+                    </div>
                     <div>
                         <img src="{{ 'images/clients/logo_ordumonde.png' | absolute_url }}"
                              alt="OR DU MONDE logo" title="OR DU MONDE" typeof="foaf:Image" class="img-responsive" />
