Add Babasport case study

--- a/_case_studies/en/09-ordumonde.html
+++ b/_case_studies/en/09-ordumonde.html
@@ -9,7 +9,7 @@ images:
 ref: ordumonde
 ---
 <div class="field field--name-body">
-    <h3>Client :</h3>
+    <h3>Client:</h3>
     <ul>
         <li><a href="https://www.ordumonde.com/">OR DU MONDE</a> is an online jewelry store - green jewelry in Paris.</li>
         <li>OR DU MONDE does not use intermediaries and traces its stones from the mine to its store. It produces exceptional jewelry, set with the most beautiful gems and made with love in Paris.</li>
@@ -18,15 +18,15 @@ ref: ordumonde
     <h3>Responsibilities:</h3>
     <ul>
         <li>Consulting: tools and strategy to develop and maintain the customer's e-commerce platform.</li>
-        <li>Project management: weekly meetings with product owner, maintain backlog</li>
+        <li>Project management: weekly meetings with product owner, maintain backlog.</li>
         <li>E-commerce backend development with the Spree framework.</li>
     </ul>
     <h3>Tasks carried out:</h3>
     <ul>
         <li>Upgrade Spree from Spree 1.2 to Spree 3.7.</li>
         <li>Updates to the checkout software to meet the 2018 financial law requirements.</li>
-        <li>Bugfixes and refactors</li>
-        <li>Add new features to the application</li>
+        <li>Bugfixes and refactors.</li>
+        <li>Add new features to the application.</li>
         <li>Provision and deploy servers using Ansible.</li>
     </ul>
 </div>
