--- a/_case_studies/fr/09-ordumonde.html
+++ b/_case_studies/fr/09-ordumonde.html
@@ -25,8 +25,8 @@ ref: ordumonde
     <ul>
         <li>Montée de versions de Spree 1.2 à Spree 3.7.</li>
         <li>Mise aux normes loi finance 2018 du logiciel de caisse.</li>
-        <li>Résolutions de bug et réusinage du code.</li>
-        <li>Ajout de nouvelles fonctionnalités.</li>
+        <li>Résolutions de bugs et réusinage du code.</li>
+        <li>Développement de nouvelles fonctionnalités.</li>
         <li>Provisioning et déploiement des serveurs avec Ansible.</li>
     </ul>
 </div>
