Add Grand Est certification to homepage

--- a/accueil.html
+++ b/accueil.html
@@ -86,20 +86,34 @@ ref: home
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 text-center">
                 <h2 class="block-title title-xl title-section text-uppercase hr primary-color">Accompagnement à l'innovation</h2>
+                <p class="text-theme lead lead-section">Nous concevons et implémentons des solutions techniques uniques et innovantes afin de répondre aux spécificités de vos problématiques métier.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6 text-justify">
                 <div class="lead-section lead">
-                    <p>Nous concevons et implémentons des solutions techniques uniques et innovantes afin de répondre aux spécificités de vos problématiques métier.</p>
                     <p>Khawa Technology a obtenu l’agrément au crédit impôt innovation au titres des années 2019 à 2023.</p>
                     <p>Cet agrément provenant du ministère de l'économie et des finances vous permet d’obtenir un crédit d'impôt correspondant à 20% du montant des prestations éligibles au crédit impôt innovation.</p>
                     <p>Pour en savoir plus sur le CII, rendez-vous sur <a target="_blank" href="https://www.entreprises.gouv.fr/politique-et-enjeux/credit-impot-innovation">le site du gouvernement</a>.</p>
                 </div>
             </div>
+            <div class="col-sm-6 text-justify">
+                <div class="lead-section lead">
+                    <p>Khawa Technology est un partenaire labellisé par la région Grand Est dans le cadre du dispositif Grand Est Transformation Digitale.</p>
+                    <p>Rendez-vous sur le <a target="_blank" href="https://www.grandest.fr/vos-aides-regionales/transformation-digitale-parcours-individuel/">site de la région</a> pour plus d'information.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-6 center-image">
                 <div class="img-responsive center-block">
                     <img src="{{ 'images/logo-credit-impot-innovation.png' | absolute_url }}" alt="Crédit Impôt Innovation"
+                         typeof="foaf:Image" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-sm-6 center-image">
+                <div class="img-responsive center-block">
+                    <img src="{{ 'images/prestataire-grand-est.png' | absolute_url }}" alt="Prestataire labellisé par la région Grand Est"
                          typeof="foaf:Image" class="img-responsive" />
                 </div>
             </div>
