--- a/index.html
+++ b/index.html
@@ -86,20 +86,34 @@ ref: home
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 text-center">
                 <h2 class="block-title title-xl title-section text-uppercase hr primary-color">A booster for innovation</h2>
+                <p class="text-theme lead lead-section">We design and implement unique and innovative technical solutions to solve your specific business problems.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6 text-justify">
                 <div class="lead-section lead">
-                    <p>We design and implement unique and innovative technical solutions to solve your specific business problems.</p>
                     <p>Khawa Technology has been accredited innovative company by the French government for years 2019 to 2023.</p>
                     <p>This accreditation from the French ministry of economy and finance can help you save 20% on eligible services.</p>
                     <p>Please visit the <a target="_blank" href="https://www.entreprises.gouv.fr/politique-et-enjeux/credit-impot-innovation">French government website</a> if you wish to learn more about CII.</p>
                 </div>
             </div>
+            <div class="col-sm-6 text-justify">
+                <div class="lead-section lead">
+                    <p>Khawa Technology is certified by the Grand Est region to support companies in their digital transformation.</p>
+                    <p>Please visit the <a target="_blank" href="https://www.grandest.fr/vos-aides-regionales/transformation-digitale-parcours-individuel/">region's website</a> for more information.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-6 center-image">
                 <div class="img-responsive center-block">
                     <img src="{{ 'images/logo-credit-impot-innovation.png' | absolute_url }}" alt="Crédit Impôt Innovation"
+                         typeof="foaf:Image" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-sm-6 center-image">
+                <div class="img-responsive center-block">
+                    <img src="{{ 'images/prestataire-grand-est.png' | absolute_url }}" alt="Prestataire labellisé par la région Grand Est"
                          typeof="foaf:Image" class="img-responsive" />
                 </div>
             </div>
