Update DirectMarket logo image

--- a/_case_studies/fr/07-direct-market.html
+++ b/_case_studies/fr/07-direct-market.html
@@ -3,7 +3,7 @@ title: "Direct Market"
 subtitle: "E-commerce sur mesure avec Spree"
 thumbnail: /images/case_studies/thumbs/logo-DirectMarket.jpg
 images:
-    - /images/case_studies/logo-DirectMarket.jpg
+    - /images/case_studies/logo-DirectMarket.png
     - /images/case_studies/screenshot-dm-1.png
     - /images/case_studies/screenshot-dm-2.png
     - /images/case_studies/screenshot-dm-3.png
