Replace Grand Est with France Num

--- a/accueil.html
+++ b/accueil.html
@@ -99,8 +99,8 @@ ref: home
             </div>
             <div class="col-sm-6 text-justify">
                 <div class="lead-section lead">
-                    <p>Khawa Technology est un partenaire labellisé par la région Grand Est dans le cadre du dispositif Grand Est Transformation Digitale.</p>
-                    <p>Rendez-vous sur le <a target="_blank" href="https://www.grandest.fr/vos-aides-regionales/transformation-digitale-parcours-individuel/">site de la région</a> pour plus d'information.</p>
+                    <p>Khawa Technology est un <a target="_blank" href="https://www.francenum.gouv.fr/activateurs/khawa-technology">partenaire labellisé Activateur France Num</a> par la Direction générale des entreprises.</p>
+                    <p>Rendez-vous sur le <a target="_blank" href="https://www.francenum.gouv.fr/experts-du-numerique/pourquoi-faire-appel-un-expert-du-numerique-reference-par-france-num">site France Num</a> pour plus d'information.</p>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@ ref: home
             </div>
             <div class="col-sm-6 center-image">
                 <div class="img-responsive center-block">
-                    <img src="{{ 'images/prestataire-grand-est.png' | absolute_url }}" alt="Prestataire labellisé par la région Grand Est"
+                    <img src="{{ 'images/activateur-france-num.jpg' | absolute_url }}" alt="Prestataire labellisé Activateur France Num"
                          typeof="foaf:Image" class="img-responsive" />
                 </div>
             </div>
