--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ ref: home
             </div>
             <div class="col-sm-6 text-justify">
                 <div class="lead-section lead">
-                    <p>Khawa Technology is certified by the Grand Est region to support companies in their digital transformation.</p>
-                    <p>Please visit the <a target="_blank" href="https://www.grandest.fr/vos-aides-regionales/transformation-digitale-parcours-individuel/">region's website</a> for more information.</p>
+                    <p>Khawa Technology is a <a target="_blank" href="https://www.francenum.gouv.fr/activateurs/khawa-technology">certified France Num activator</a> that supports companies in their digital transformation.</p>
+                    <p>Please visit the <a target="_blank" href="https://www.francenum.gouv.fr/experts-du-numerique/pourquoi-faire-appel-un-expert-du-numerique-reference-par-france-num">France Num website</a> for more information.</p>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@ ref: home
             </div>
             <div class="col-sm-6 center-image">
                 <div class="img-responsive center-block">
-                    <img src="{{ 'images/prestataire-grand-est.png' | absolute_url }}" alt="Prestataire labellisé par la région Grand Est"
+                    <img src="{{ 'images/activateur-france-num.jpg' | absolute_url }}" alt="Prestataire labellisé Activateur France Num"
                          typeof="foaf:Image" class="img-responsive" />
                 </div>
             </div>
