--- a/accueil.html
+++ b/accueil.html
@@ -210,12 +210,10 @@ ref: home
                     <h3 class="title-sm text-theme mt-10 primary-color">Frameworks</h3>
                     <ul class="text-theme list-unstyled">
                         <li>Ruby on Rails</li>
-                        <li>Rspec / capybara</li>
-                        <li>React / Redux / webpack</li>
-                        <li>Cypress / Mocha / Jest</li>
-                        <li>Next.js</li>
+                        <li>React / Next.js</li>
+                        <li>Rspec / Capybara / Cypress</li>
                         <li>Jekyll</li>
-                        <li>Projets legacy</li>
+                        <li>Legacy projects</li>
                     </ul>
                 </div>
             </div>
@@ -237,12 +235,10 @@ ref: home
                     <ul class="text-theme list-unstyled">
                         <li>Linux</li>
                         <li>Ansible</li>
-                        <li>Intégration continue</li>
-                        <li>Déploiement continu</li>
                         <li>Docker</li>
-                        <li>Vagrant</li>
-                        <li>OpenStack</li>
-                        <li>Heroku</li>
+                        <li>Heroku / Scalingo</li>
+                        <li>Continuous delivery</li>
+                        <li>Continuous deployment</li>
                     </ul>
                 </div>
             </div>
