--- a/index.html
+++ b/index.html
@@ -315,6 +315,17 @@ ref: home
                     <div id="carousel-22" class="carousel slide" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="active item">
+                                <img src="{{ 'images/testimonials/testimonials-SP.jpg' | absolute_url }}"
+                                     alt="Sacha Pavan" typeof="foaf:Image" class="img-circle center-block" />
+                                <h3 class="title-xs text-theme mt-16">Sacha Pavan</h3>
+                                <p class="lead text-theme">
+                                    <i class="fa fa-quote-left"></i>
+                                    A great pleasure to work with François and Antoine, a sharp, efficient, and available team, delivering high quality and durable code.
+                                    I highly recommend their services.
+                                    <i class="fa fa-quote-right"></i>
+                                </p>
+                            </div>
+                            <div class="item">
                                 <img src="{{ 'images/testimonials/testimonials-AP.jpg' | absolute_url }}"
                                      alt="Antoine Petit" typeof="foaf:Image" class="img-circle center-block" />
                                 <h3 class="title-xs text-theme mt-16">Antoine Petit</h3>
