Update ODM case study

--- a/_case_studies/en/09-ordumonde.html
+++ b/_case_studies/en/09-ordumonde.html
@@ -4,8 +4,8 @@ subtitle: "Custom e-commerce with Spree"
 thumbnail: /images/case_studies/thumbs/logo-ordumonde.jpg
 images:
 - /images/case_studies/logo-ordumonde.jpg
-- /images/case_studies/screenshot-odm-1.jpg
-- /images/case_studies/screenshot-odm-2.jpg
+- /images/case_studies/screenshot-odm-1.png
+- /images/case_studies/screenshot-odm-2.png
 ref: ordumonde
 ---
 <div class="field field--name-body">
@@ -23,11 +23,12 @@ ref: ordumonde
     </ul>
     <h3>Tasks carried out:</h3>
     <ul>
-        <li>Upgrade Spree from Spree 1.2 to Spree 3.7.</li>
+        <li>Upgrade Spree from Spree 1.2 to Spree 4.4.</li>
         <li>Updates to the checkout software to meet the 2018 financial law requirements.</li>
         <li>Bugfixes and refactors.</li>
-        <li>Add new features to the application.</li>
+        <li>Add new features to the application: unique items inventory tracking, production control and more.</li>
         <li>Provision and deploy servers using Ansible.</li>
+        <li>Development of a new decoupled frontend using Next.js, design implementation.</li>
     </ul>
 </div>
 
@@ -40,6 +41,8 @@ ref: ordumonde
         <div class="field--item">MySQL</div>
         <div class="field--item">Ansible</div>
         <div class="field--item">Capistrano</div>
+        <div class="field--item">React</div>
+        <div class="field--item">Next.js</div>
     </div>
 </div>
 
