--- a/_case_studies/fr/09-ordumonde.html
+++ b/_case_studies/fr/09-ordumonde.html
@@ -23,11 +23,12 @@ ref: ordumonde
     </ul>
     <h3>Tâches réalisées :</h3>
     <ul>
-        <li>Montée de versions de Spree 1.2 à Spree 3.7.</li>
+        <li>Montée de versions de Spree 1.2 à Spree 4.4.</li>
         <li>Mise aux normes loi finance 2018 du logiciel de caisse.</li>
         <li>Résolutions de bugs et réusinage du code.</li>
-        <li>Développement de nouvelles fonctionnalités.</li>
+        <li>Développement de nouvelles fonctionnalités : suivi des articles uniques dans l'inventaire, pilotage de la production, et autres.</li>
         <li>Provisioning et déploiement des serveurs avec Ansible.</li>
+        <li>Développement d'un nouveau frontend découplé avec Next.js, implémentation du design.</li>
     </ul>
 </div>
 
@@ -40,6 +41,8 @@ ref: ordumonde
         <div class="field--item">MySQL</div>
         <div class="field--item">Ansible</div>
         <div class="field--item">Capistrano</div>
+        <div class="field--item">React</div>
+        <div class="field--item">Next.js</div>
     </div>
 </div>
 
