Update Babasport case study

--- a/_case_studies/en/10-babasport.html
+++ b/_case_studies/en/10-babasport.html
@@ -11,22 +11,23 @@ ref: babasport
 <div class="field field--name-body">
     <h3>Client:</h3>
     <ul>
-        <li><a href="https://www.babasport.fr/">Babasport</a> is a booking marketplace for activities such as bachelor parties, anniversaries, etc.</li>
+        <li><a href="https://www.babasport.fr/">Babasport</a> is a marketplace for booking activities such as bachelor parties, anniversaries, etc.</li>
         <li>It's a simple, flexible and economic service that allows everyone to easily book all kinds of events at any time.</li>
-        <li>Babasport is for everyone who is looking online for unusual activities.</li>
+        <li>Babasport is for everyone who is looking online for unique and fun activities.</li>
     </ul>
     <h3>Responsibilities:</h3>
     <ul>
         <li>Consulting: tools and strategy to develop and maintain the customer's marketplace.</li>
-        <li>Project management: weekly meetings with product owner, maintain backlog.</li>
+        <li>Project management: weekly meetings with the product owner, maintain backlog.</li>
         <li>Backend and frontend development of new features.</li>
+        <li>Update Rails from 4.2 to 7.0</li>
     </ul>
     <h3>Tasks carried out:</h3>
     <ul>
-        <li>Take over an abandoned branch in development.</li>
+        <li>Take over an abandoned branch and complete the features.</li>
         <li>Bugfixes and refactors.</li>
         <li>Improve memory usage performances.</li>
-        <li>Integrate and use Algolia for search.</li>
+        <li>Integrate Algolia for efficient search.</li>
         <li>Add new features to the application.</li>
     </ul>
 </div>
@@ -34,13 +35,13 @@ ref: babasport
 <div class="field field--name-field-technologies">
     <div class="field--label">Technologies</div>
     <div class="field--items">
-        <div class="field--item">Ruby</div>
-        <div class="field--item">Rails</div>
+        <div class="field--item">Ruby on Rails</div>
         <div class="field--item">PostgreSQL</div>
         <div class="field--item">Heroku</div>
         <div class="field--item">Algolia</div>
         <div class="field--item">Mangopay</div>
         <div class="field--item">Amazon S3</div>
+        <div class="field--item">React</div>
     </div>
 </div>
 
