--- a/_case_studies/fr/10-babasport.html
+++ b/_case_studies/fr/10-babasport.html
@@ -18,15 +18,16 @@ ref: babasport
     <h3>Responsabilités :</h3>
     <ul>
         <li>Conseil : outils et stratégie pour le développement et la maintenance de la marketplace.</li>
-        <li>Gestion de projet : meetings hebdomaires et gestion du backlog.</li>
+        <li>Gestion de projet : meetings hebdomadaires avec le product owner et gestion du backlog.</li>
         <li>Développement backend et frontend de nouvelles fonctionnalités.</li>
+        <li>Mise à jour de Rails de 4.2 à 7.0</li>
     </ul>
     <h3>Tâches réalisées :</h3>
     <ul>
-        <li>Reprise et intégration d'une branche en cours de développement.</li>
+        <li>Reprise et complétion d'une branche en cours de développement.</li>
         <li>Résolutions de bugs et réusinage du code.</li>
         <li>Amélioration des performances mémoires.</li>
-        <li>Intégration et utilisation d'Algolia pour la recherche d'activités.</li>
+        <li>Intégration d'Algolia pour la recherche d'activités.</li>
         <li>Développement de nouvelles fonctionnalités.</li>
     </ul>
 </div>
@@ -34,13 +35,13 @@ ref: babasport
 <div class="field field--name-field-technologies">
     <div class="field--label">Technologies</div>
     <div class="field--items">
-        <div class="field--item">Ruby</div>
-        <div class="field--item">Rails</div>
+        <div class="field--item">Ruby on Rails</div>
         <div class="field--item">PostgreSQL</div>
         <div class="field--item">Heroku</div>
         <div class="field--item">Algolia</div>
         <div class="field--item">Mangopay</div>
         <div class="field--item">Amazon S3</div>
+        <div class="field--item">React</div>
     </div>
 </div>
 
