Update DM case study

--- a/_case_studies/en/07-direct-market.html
+++ b/_case_studies/en/07-direct-market.html
@@ -34,8 +34,7 @@ ref: directmarket
 <div class="field field--name-field-technologies">
     <div class="field--label">Technologies</div>
     <div class="field--items">
-        <div class="field--item">Ruby</div>
-        <div class="field--item">Rails</div>
+        <div class="field--item">Ruby on Rails</div>
         <div class="field--item">Spree</div>
         <div class="field--item">React / Redux</div>
         <div class="field--item">PostgreSQL</div>
