Fix ODM case study images

--- a/_case_studies/fr/09-ordumonde.html
+++ b/_case_studies/fr/09-ordumonde.html
@@ -4,8 +4,8 @@ subtitle: "E-commerce sur mesure avec Spree"
 thumbnail: /images/case_studies/thumbs/logo-ordumonde.jpg
 images:
 - /images/case_studies/logo-ordumonde.jpg
-- /images/case_studies/screenshot-odm-1.jpg
-- /images/case_studies/screenshot-odm-2.jpg
+- /images/case_studies/screenshot-odm-1.png
+- /images/case_studies/screenshot-odm-2.png
 ref: ordumonde
 ---
 <div class="field field--name-body">
