Add Whatsapp bot case study

--- a/_case_studies/en/01-ruby-rails-crm.html
+++ b/_case_studies/en/01-ruby-rails-crm.html
@@ -16,7 +16,7 @@ ref: ror-crm
         </li>
         <li>Based in Niedermodern, France, Fahner manufactures plastic pieces for the industry.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Needs analysis with the client.</li>
         <li>Understanding of the problems faced by the company: visibility problems of the commercial department on customer orders, communication problems between the company's different services.</li>
