--- a/_case_studies/en/02-custom-ruby-rails-erp.html
+++ b/_case_studies/en/02-custom-ruby-rails-erp.html
@@ -14,7 +14,7 @@ ref: erp-ror
         <li><a href="http://www.fahrner.fr">Fahrner</a> company.</li>
         <li>Based in Niedermodern, France, Fahner manufactures plastic pieces for the industry.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Needs analysis with the client.</li>
         <li>Understanding of the problems faced by the company: organization of production, difficulties to determine manufacturing delays, poor insight on production status, difficulties to harness data captured by the existing ERP.</li>
