--- a/_case_studies/en/03-victoria-kha.html
+++ b/_case_studies/en/03-victoria-kha.html
@@ -18,7 +18,7 @@ ref: vk
         <li>Maintenance and support.</li>
         <li>Custom application development.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Evolutions and customizations of the shop's graphic theme: HTML, CSS and Javascript developments.</li>
         <li>Performance optimizations: page load.</li>
