--- a/_case_studies/en/04-visorando.html
+++ b/_case_studies/en/04-visorando.html
@@ -20,7 +20,7 @@ ref: hikes
         <li>Propose technical solutions to simplify and improve existing code.</li>
         <li>Propose solutions to implement new geographical computation algorithms.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Code refactoring: use Composer, add namespaces, use <a href="http://php-di.org">PHP-DI</a>, upgrade to PHP 7,
             add acceptance tests, add database migration system, compatibility with PSR-2, PSR-3, PSR-4, PSR-11...</li>
