--- a/_case_studies/en/05-non-disclosure-big-retail-company-ecommerce.html
+++ b/_case_studies/en/05-non-disclosure-big-retail-company-ecommerce.html
@@ -17,7 +17,7 @@ ref: solidus-retailer
     <ul>
         <li>E-commerce backend development with the Solidus framework.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Implement data flows for automatic information sharing between the company's different entities: finance, marketing, customer satisfaction, etc.</li>
         <li>Implement data flows with providers to synchronize products' data.</li>
