--- a/_case_studies/en/06-labquest-simulator.html
+++ b/_case_studies/en/06-labquest-simulator.html
@@ -20,7 +20,7 @@ ref: labquest
         <li>Backend development with Ruby on Rails.</li>
         <li>Docker architecture maintenance</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Integrate a new version of the Unity 3D engine into LabQuest.</li>
         <li>Add customizable features to the 3D environments: procedures and events.</li>
