--- a/_case_studies/en/07-direct-market.html
+++ b/_case_studies/en/07-direct-market.html
@@ -23,7 +23,7 @@ ref: directmarket
         <li>E-commerce backend development with the Spree framework.</li>
         <li>E-commerce frontend development with React / Redux.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Setup a fresh Spree instance.</li>
         <li>Customize the Spree application to the client's needs: producers, supermarkets, logistic fees, dm service fees, invoices, credit notes, and more..</li>
