--- a/_case_studies/en/08-hippocrene.html
+++ b/_case_studies/en/08-hippocrene.html
@@ -20,7 +20,7 @@ ref: hippocrene
         <li>Consulting, maintenance and support.</li>
         <li>Develop new features.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Maintenance: bug fixes, new features.</li>
         <li>Provision and deploy staging.</li>
