--- a/_case_studies/en/09-ordumonde.html
+++ b/_case_studies/en/09-ordumonde.html
@@ -21,7 +21,7 @@ ref: ordumonde
         <li>Project management: weekly meetings with product owner, maintain backlog.</li>
         <li>E-commerce backend development with the Spree framework.</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Upgrade Spree from Spree 1.2 to Spree 4.4.</li>
         <li>Updates to the checkout software to meet the 2018 financial law requirements.</li>
