--- a/_case_studies/en/10-babasport.html
+++ b/_case_studies/en/10-babasport.html
@@ -22,7 +22,7 @@ ref: babasport
         <li>Backend and frontend development of new features.</li>
         <li>Update Rails from 4.2 to 7.0</li>
     </ul>
-    <h3>Tasks carried out:</h3>
+    <h3>Completed Tasks:</h3>
     <ul>
         <li>Take over an abandoned branch and complete the features.</li>
         <li>Bugfixes and refactors.</li>
