--- a/_case_studies/fr/05-non-disclosure-ecommerce-grande-distribution.html
+++ b/_case_studies/fr/05-non-disclosure-ecommerce-grande-distribution.html
@@ -1,5 +1,5 @@
 ---
-title: "Grande enseigne de la grande distribution"
+title: "Enseigne de la grande distribution"
 subtitle: "E-commerce avec Solidus"
 thumbnail: /images/case_studies/thumbs/non-disclosure-agreement.jpg
 images:
